# agri_energy_demo

./: .gitignore  app.py  logs-kudjason-agri_energy_demo-main-app.py-2025-12-28T18_22_27.600Z.txt  pyproject.toml  requirements.txt
knowledge_base/: README.md  extracted_rules.ttl  ingested_policies.ttl  kg_belgium.mmd  ontology.ttl  processed_files.txt  processed_france_files.txt  request_rates_france.csv  rules_belgium.ttl  rules_combined.ttl  rules_enriched.ttl  rules_flanders.ttl  rules_france.ttl  shapes.ttl
knowledge_base/data/: locations.ttl
knowledge_base/data/customers/: mock_profiles.ttl
knowledge_base/data/forms/: pac_forms.ttl
knowledge_base/data/rules/: opportunities.ttl
knowledge_base/ontology/: business_core.ttl
knowledge_base/queries/: select_criteria.sparql  select_opportunities.sparql  select_payments.sparql
pages/: 01_Mock_Demo.py  02_LLM_Demo.py  03_KG_Explorer.py
scripts/: cleanup_wallonia_extra.py  consolidate_markdown.py  convert_pdfs_to_md.py  create_extraction_notebook.py  debug_count.py  debug_env_keys.py  debug_pdf_text.py  demo_ontology.py  download_belgium_docs.py  download_extra_belgium_docs.py  download_flanders_docs.py  download_france_docs.py  enrich_kg_with_tags.py  extract_belgium_rules.py  extract_france_rules.py  extract_rules.py  extract_rules_llm.py  ingest_pdfs.py  list_models.py  policy_extraction_workflow.ipynb  policy_processing.ipynb  query_kg.py  test_api.py  test_loading.py  validate_shacl.py  verify_filtering.py  verify_tags.py  visualize_kg.py
utils/: match_opportunities.py
(+122 files in other folders)
